# pathos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: FullScreenTri.vertex  FullScreenTri.vertex.cso  ImGui.pixel.cso  ImGui.vertex  ImGui.vertex.cso  TestTri.pixel  TestTri.pixel.cso  TestTri.vertex  TestTri.vertex.cso  test.pixel  test.pixel.cso  test.vertex  test.vertex.cso
assets/shaders/lib/: GlobalSamplers.hlsli  RootSigs.hlsli  ShaderOutput.hlsli
cmake/: pathos_projects.cmake
pathos/: CMakeLists.txt
pathos/app/: App.cpp  App.h  CMakeLists.txt  ImGuiHandler.cpp  ImGuiHandler.h  Window.h
pathos/app/Win/: Window_Win.cpp
pathos/apps/: CMakeLists.txt
pathos/apps/testbed_app/: CMakeLists.txt  TestbedApp.cpp  TestbedApp.h
pathos/core/: CVar.cpp  CVar.h
pathos/editor/: CMakeLists.txt  Editor.cpp  Editor.h
pathos/editor_app/: CMakeLists.txt  EditorApp.cpp  EditorApp.h
pathos/gpu/: CMakeLists.txt  CommandContext.cpp  CommandContext.h  FormatConversion.h  GPUDevice.h  GPURingBuffer.h  HandleRef.h  Types.cpp  Types.h
pathos/gpu/d3d12/: CommandContext_D3D12.cpp  CommandContext_D3D12.h  CommandQueue.cpp  CommandQueue.h  CommandQueue_D3D12.cpp  CommandQueue_D3D12.h  D3D12_Utils.h  DescriptorHeap.cpp  DescriptorHeap.h  DescriptorHeap_D3D12.cpp  DescriptorHeap_D3D12.h  GPUDevice_D3D12.cpp  GPUDevice_D3D12.h  Types_D3D12.cpp  Types_D3D12.h
pathos/input/: Input.cpp  Input.h  InputTypes.cpp  InputTypes.h
pathos/input/Win/: Input_Win.cpp  Input_Win.h
pathos/libs/: CMakeLists.txt
pathos/libs/app/: App.cpp  App.h  CMakeLists.txt  CameraController.cpp  CameraController.h  ImGuiHandler.cpp  ImGuiHandler.h  Window.h
pathos/libs/app/Win/: Window_Win.cpp
pathos/libs/core/: CMakeLists.txt  CVar.cpp  CVar.h  FolderWatcher.cpp  FolderWatcher.h  Memory.cpp  Memory.h
pathos/libs/editor/: CMakeLists.txt  Editor.cpp  Editor.h  GPUWindows.cpp  GPUWindows.h  ImGuiHandler.cpp  ImGuiHandler.h
pathos/libs/editor/Windows/: GFXSceneWindow.cpp  GFXSceneWindow.h  GPUWindows.cpp  GPUWindows.h
pathos/libs/gfx/: CMakeLists.txt  Camera.cpp  Camera.h  DebugRender.cpp  DebugRender.h  EnvMap.cpp  EnvMap.h  Material.cpp  Material.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  Primitive.cpp  Primitive.h  ResourceManager.cpp  ResourceManager.h  Resources.cpp  Resources.h  Scene.cpp  Scene.h  ShadowUtils.cpp  ShadowUtils.h  SharedResources.cpp  SharedResources.h  Texture.cpp  Texture.h  Utils.h
pathos/libs/gpu/: CMakeLists.txt  CommandContext.h  FormatConversion.h  GPUDevice.h  GPUProfiler.cpp  GPUProfiler.h  GPURingBuffer.cpp  HandleRef.h  Types.cpp  Types.h
pathos/libs/gpu/d3d12/: CommandContext_D3D12.cpp  CommandContext_D3D12.h  CommandQueue_D3D12.cpp  CommandQueue_D3D12.h  DescriptorHeap_D3D12.cpp  DescriptorHeap_D3D12.h  GPUDevice_D3D12.cpp  GPUDevice_D3D12.h  GenMips.hlsli  QueryProfiler_D3D12.cpp  QueryProfiler_D3D12.h  Types_D3D12.cpp  Types_D3D12.h  Utils_D3D12.h
pathos/libs/input/: CMakeLists.txt  Input.cpp  Input.h  InputTypes.cpp  InputTypes.h
pathos/libs/input/Win/: Input_Win.cpp
pathos/libs/res/: CMakeLists.txt  FolderWatcher.cpp  FolderWatcher.h  Resource.cpp  Resource.h  ResourceSystem.cpp  ResourceSystem.h
pathos/shaders/: .gitattributes  BakeEnvMapGGX.cs  BakeGGXLut.cs  BakeIrradianceMap.cs  CopyTexture.cs  CopyTextureArray.cs  DebugRender.ps  DebugRender.vs  EquirectToCubemap.cs  FullScreenTri.vs  GenMipsArrayLinear.cs  GenMipsArraySRGB.cs  GenMipsCubeLinear.cs  GenMipsCubeSRGB.cs  GenMipsLinear.cs  GenMipsSRGB.cs  ImGui.pixel  ImGui.ps  ImGui.vertex  ImGui.vs  ObjectShader.ps  ObjectShader.vs  ShadowMap.vs  SkyBox.ps  SkyBox.vs  TestTri.pixel  TestTri.ps  TestTri.vertex  TestTri.vs
pathos/shaders/gpu_culling/: ClearDrawCounter.cs  CullSubmeshes.cs
pathos/shaders/lib/: CPPInterop.h  ShaderOutput.hlsli
pathos/shaders/shaderlib/: CPPInterop.h  CommonShared.h  Constants.hlsli  CullingShared.h  DefinesShared.h  GFXPerFrameBindings.hlsli  GlobalSamplers.hlsli  LightingCommon.hlsli  LightingStructs.h  Sampling.hlsli  ShaderOutput.hlsli
scripts/: BuildShaders.py
